# python2025

./: .gitignore  README.md  pyproject.toml
00.pip/: 01.pip.md
02.black_ruff_wps/src/: 03.output_collect.py  04.cc.py
03.typing/: typing.md
03.typing/src/: 04.generator.py  10.add_secondary_ip.py  11.secondary_ip_with_iterator.py  12.secondary_ip_with_namedtuple.py  13.secondary_ip_with_dataclass.py  14.secondary_ip_with_pydantic.py  15.typealias_simple.py  16.typealias_complex.py  17.typealiastype.py  19.typevar.py  20.any.py  21.never.py  23.assert_never.py  24.assert_type.py  25.paramspec.py  26.overload.py  27.generic.py  28.enum.py  28.protocol.py  29.self.py  31.type_c.py  33.newtype.py
04.mypy/: mypy.md
04.mypy/src/: 02.disallow-untyped-calls.py  04.warn-return-any.py  06.steps.py  disallow-untyped-calls.py  reveal_type_locals.py  steps.py  warn-return-any.py  warn-unreachable.py
05.oop/: oop.md
05.oop/src/: 01.inheritance.simple.py  03.inheritance.multi.py  05.incapsulation-2.py  08.aggregation.py  09.composition-2.py  10.property-1.py  11.property-2.py  17.eq.py  19.contains.py  20.enter.exit.py
06.redis/: redis.md
06.redis/src/: 02.list.py  04.hash.py  06.bitmap.py  07.stream.py
07.abc/src/: 02.abc.py
08.protocol/src/: 01.simple_protocol.py  09.protocol.py
09.mixin/src/: 01.logger_mixin.py
10.metaclass/: metaclass.md
10.metaclass/src/: 00.type.py  01.type.py  02.dynamic_load.py  05.registry.py  06.registry_decorator.py
11.descriptor/: descriptor.md
11.descriptor/src/: 01.value.py  02.person.py  03.shared.py  05.param.py
11.patterns/: patterns.md
11.patterns/src/: 01.adapter_base.py  02.adapter.py  04.adapter_separate.py  05.bridge.py  11.singleton_new.py  12.singleton_metaclass.py  14.observers.py  15.template_method.py
12.patterns/src/: 01.adapter_base.py  02.adapter.py  03.adapter_composition.py  06.facade.py  08.factory_method.py  09.abstract_factory.py  10.singleton_decorator.py  11.singleton_new.py  12.singleton_metaclass.py  13.builder.py  14.observers.py
13.scrapli/: scrapli.md
13.scrapli/src/: 03.with.py  04.transports.py  06.enable.py  10.send_configs.py  11.send_interactive.py  13.get_prompt.py  15.onopen_onclose.py  16.response_multiresponse.py  17.textfsm.py  17.transport_options.py  18.candidate_eltex.py  19.enable_basic_logging.py  20.channel_log.py  22.genericdriver.py  23.driver.py  24.jump_host_ssh_config.py  25.jump_host_manual.py  26.console.py  27.commandeer.py  28.fortinet_ngfw.py  29.mikrotik.py  ssh_scrapli_jump_host
14.nornir/: nornir.md
14.scraply_replay/pytest/: devices.py
15.multitasking/: multitasking.md
16.threading/: threading.md
16.threading/src/: 03.daemon.py  04.timer.py  05.semaphore.py  06.return.py  09.map.py  10.submit.py  11.as_completed.py
17.async/: async.md
17.async/src/: 00.gen.py  01.coro_direct.py  02.coro_main.py  03.task.py  04.create_task.py  05.gather.py  06.future.py  07.life_cycle_basic.py  08.life_cycle_cancel.py  09.awaitable.py  10.await.py  20.run.py  21.context.py  21.context_base.py  21.context_nested.py  21.run_exc.py  22.context.py  23.gather.py  24.wait_for.py  25.shield.py  25.wait.py  26.as_completed.py  26.timeout.py  27.custom_loop.py  28.run_forever.py  29.get_running_loop.py  30.to_thread.py  31.run_in_executor.py  32.task_states.py  33.taskgroup.py  35.with.py  36.with_netbox.py  37.for_basic.py  38.for.py  39.for_netbox_generator.py  40.for_netbox_iterator.py  41.mutex_room.py  43.mutex_temp_pm.py  44.deadlock.py  45.queue.py  (+8 more)
98.scraply_replay/: scraply_replay.md
98.scraply_replay/mock_ssh/: 01.collector.py  collector_session_dump_192.168.122.101.yaml
98.scraply_replay/pytest/: test_device.py
99.homework/02.black_ruff_wps/: complex.py  task1_complex.py
99.homework/05.oop/: task1_aggregation.py  task1_composition.py
c01_poetry/: 01.poetry.md
c02_black_ruff_wps/: black_ruff_wps.md
c02_black_ruff_wps/src/: 01.black.fmt.py
c03_typing/: typing.md
c03_typing/src/: .flake8  01.literal.py  02.final.py  03.iterator.py  05.generator.py  06.iterable.py  07.sequence.py  08.callable.py  09.simple_example.py  13.secondary_ip_with_dataclass.py  14.secondary_ip_with_pydantic.py  15.typealias_simple.py  16.typealias_complex.py  18.type.py  21.never.py  22.noreturn.py  23.assert_never.py  24.assert_type.py  28.protocol.py  29.self.py  32.classvar.py  makefile
c04_mypy/: mypy.md
c04_mypy/src/: 01.reveal_type_locals.py  03.disallow-untyped-defs.py  05.warn-unreachable.py
c05_oop/: oop.md
c05_oop/src/: 02.inheritance.super.py  04.incapsulation-1.py  07.composition-1.py  09.composition-2.py  12.classmethod.py  13.str_repr.py  14.dict.py  15.borg.py  16.slots.py  18.hash.py  21.call.py
c06_redis/src/: 01.string.py  03.set.py  04.hash.py  05.zset.py
c07_abc/: abc.md
c07_abc/src/: 01.no_abc.py  03.register.py  04.setter_getter.py  05.abcmeta.py
c08_protocol/: protocol.md
c08_protocol/src/: 02.generic_protocol.py  03.class_members.py  04.subprotocols.py  05.regular_class.py
c09_mixin/: mixin.md
c09_mixin/src/: 01.logger_mixin.py  02.init_super.py  03.dump_load_mixin.py
c10_metaclass/src/: 04.custom_meta.py  07.singleton.py  devices.yaml  platforms.yaml
c11_descriptor/src/: 04.set_name.py
c12_patterns/: patterns.md
c12_patterns/src/: 01.adapter_base.py  05.bridge.py  06.facade.py  07.simple_factory.py  09.abstract_factory.py  10.singleton_decorator.py  14.observers.py  15.template_method.py  16.chain_of_responsibility.py
c13_scrapli/: scrapli.md
c13_scrapli/src/: 01.basic_scrapli.py  02.send_command.py  05.platforms.py  07.send_command.py  08.send_commands.py  09.send_config.py  11.send_interactive.py  12.send_and_read.py  14.isalive.py  17.textfsm.py  17.transport_options.py  18.candidate_arista.py  19.enable_basic_logging.py  21.logger.py  28.fortinet_ngfw.py  29.mikrotik.py  30.mikrotik_ospf.py
c14_nornir/: nornir.md
c16_threading/src/: 01.thread.py  02.join.py  03.lock.py  05.semaphore.py  06.return copy.py  (+3 more)
c17_async/: async.md
c18_pytest/: pytest.md
c19_scrapli_replay/: scraply_replay.md
c20_grpc/: grpc.md
(+451 files in other folders)
